--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ Imports:
   mapsf,
   osrm,
   geos
+URL: https://github.com/sonjamaas/whereRthetrees
+BugReports: https://github.com/sonjamaas/whereRthetrees/issues
